name:                ML
version:             0.1.0.0
synopsis:            Machine learning code.
description:         Please see README.md
homepage:            https://github.com/m-renaud/ML#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Renaud
copyright:           2016 Matt Renaud
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -threaded
  exposed-modules:     ML.NN, ML.NN.Activation, ML.NN.ActivationFunction,
                       ML.Sample, Control.Monad.Random.Extended
  build-depends:       MonadRandom >= 0.4.2.2 && < 0.5,
                       array >= 0.5.1.0,
                       base >= 4.7 && < 5,
                       hmatrix >= 0.17.0.1 && < 0.18,
                       mtl >= 2.2.1,
                       normaldistribution >= 1.1.0.2 && < 1.2,
                       random >= 1.1 && < 2,
                       split >= 0.2.3
  default-language:    Haskell2010

executable test
  hs-source-dirs:      testing
  main-is:             Main.hs
  ghc-options:         -Wall -threaded
  build-depends:       ML,
                       MonadRandom >= 0.4.2.2 && < 0.5,
                       array >= 0.5.1.0,
                       base >= 4.7 && < 5,
                       hmatrix >= 0.17.0.1 && < 0.18,
                       mtl >= 2.2.1,
                       split >= 0.2.3

  default-language:    Haskell2010


executable parse
  hs-source-dirs:      parse
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -fprof-auto -rtsopts
  build-depends:       ML,
                       MonadRandom >= 0.4.2.2 && < 0.5,
                       array >= 0.5.1.0,
                       attoparsec >= 0.13.0.2,
                       base >= 4.7 && < 5,
                       bytestring >= 0.10.6.0,
                       containers >= 0.5.6.2,
                       hmatrix >= 0.17.0.1 && < 0.18,
                       mtl >= 2.2.1,
                       vector >= 0.11.0.0

  default-language:    Haskell2010

-- ==================================================
-- Tests.
-- ==================================================

test-suite test-all
  type:                exitcode-stdio-1.0
  hs-source-dirs:      testsuite/tests
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       HUnit >= 1.3.1.1 && < 1.4,
                       ML,
                       array >= 0.5.1.0,
                       base >= 4.7 && < 5,
                       hmatrix >= 0.17.0.1 && < 0.18,
                       mtl >= 2.2.1,
                       split >= 0.2.3,
                       tasty >= 0.11.0.3 && < 0.12,
                       tasty-hunit >= 0.9.2 && < 0.10
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/m-renaud/ML
